--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,6 @@ yarn-error.log*
 # vercel
 .vercel
 # others
-/Urls must be added to valid auth redirect url.txt
+Urls must be added to valid auth redirect url.txt
+#libraries
+fireConfig.js
